--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,5 @@
 <footer class="footer">
-    <p>&copy; {{ AUTHOR }} &ndash;
-        Built with <a href="https://github.com/PurePelicanTheme/pure-single">Pure Theme</a>
-        for <a href="http://blog.getpelican.com/">Pelican</a>
+		<p>&copy; <a href="{{ PROFILE_IMG_HREF }}">{{ AUTHOR }}</a> 2015 &ndash;
+        Built using <a href="http://blog.getpelican.com/">Pelican</a> (<a href="https://github.com/nirum/pure-single">theme</a>)
     </p>
 </footer>
