--- a/templates/article.html
+++ b/templates/article.html
@@ -28,9 +28,7 @@
                 <header class="post-header">
                     <h1>{{ article.title }}</h1>
                         <p class="post-meta">
-                            // under {% for tag in article.tags %}
-                                <a class="post-category" href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
-                            {% endfor %}
+														Posted on: {{ article.locale_date }}
                         </p>
                 </header>
             </section>
