--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-		<p>&copy; <a href="{{ PROFILE_IMG_HREF }}">{{ AUTHOR }}</a> 2015 &ndash;
-        Built using <a href="http://blog.getpelican.com/">Pelican</a> (<a href="https://github.com/nirum/pure-single">theme</a>)
+		<p>&copy; <a href="{{ PROFILE_IMG_HREF }}">{{ AUTHOR }}</a> &ndash;
+        Built using <a href="http://blog.getpelican.com/">Pelican</a>
     </p>
 </footer>
